--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "displayName": "FreezeZoom",
     "description": "",
     "version": "1.0.0",
-    "publisher": "none",
+    "publisher": "IAmHardliner",
     "engines": {
         "vscode": "^1.16.0"
     },
+    "repository": "https://github.com/hardliner66/freezezoom",
     "categories": [
         "Other"
     ],
@@ -49,9 +50,9 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.5.3",
-        "vscode": "^1.1.5",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "typescript": "^3.8.2",
+        "vscode": "^1.1.36",
+        "@types/node": "^13.7.4",
+        "@types/mocha": "^7.0.1"
     }
 }
